threat intel africa website setup

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ background: '/img/bg-index.jpg'
 <div class="rounded mb-5 hero">
   <div class="row align-items-center justify-content-between">
     <div class="col-md-6">
-      <h1 class="font-weight-bold mb-4 serif-font">Theat Intel Africa</h1>
+      <h1 class="font-weight-bold mb-4 serif-font">Threat Intel Africa</h1>
       <p class="lead mb-4">Improving threat intelligence in the African region!</p>
       <a href="{{site.baseurl}}/categories" class="btn btn-dark text-white px-5 btn-lg">View Reports</a>
     </div>
