--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ background: '/img/bg-index.jpg'
     <div class="col-md-6">
       <h1 class="font-weight-bold mb-4 serif-font">Threat Intel Africa</h1>
       <p class="lead mb-4">Improving threat intelligence in the African region!</p>
-      <a href="{{site.baseurl}}/categories" class="btn btn-dark text-white px-5 btn-lg">View Reports</a>
+      <a href="{{site.baseurl}}/categories" class="btn btn-dark text-white px-5 btn-lg">Explore</a>
     </div>
     <div class="col-md-6 text-right pl-0 pl-lg-4">
       <img class="intro" height="500" src="{{site.baseurl}}/assets/images/analysis.png">      
